# phorg

./: .gitignore  Cargo.toml  README.md  SPEC.md
.github/workflows/: test.yml
src/: main.rs
test/: integration_test.rs
