[package]
name = "phorg"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
kamadak-exif = "0.5"
anyhow = "1"
indicatif = "0.17"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"

[[test]]
name = "integration_test"
path = "test/integration_test.rs"
